--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-  <script src="jquery.fixedbg.min.js"></script>
-
-  <script src="js/jquery.js"></script>
-  <script src="js/bootstrap.min.js">
 </script>
 
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" media="all">
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- cloudflare -->
 
@@ -36,9 +33,9 @@
 <!-- instagram link ---->
 
  <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
+
   
 <!---footer--->
-  <link href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css" rel="stylesheet">
 </head>
      <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
