--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@ necklaces, rings, and other jewelry for any occasion.</p>
 
 
 
-         <img src="https://image.ibb.co/c2kR1k/2017_08_20_2206.jpg" alt="JEWELRY" class="image">
+         <img src="https://image.ibb.co/j983uF/Capture4.jpg" alt="JEWELRY" class="image">
          <div class="overlay">
-           <div class="text">Some text here</div>
+           <div class="text">QUICK VIEW</div>
 
          </div>
        </div>
@@ -250,9 +250,9 @@ necklaces, rings, and other jewelry for any occasion.</p>
    <div class="col-sm-4">
      <div class="hover-img">
 
-         <img src="https://image.ibb.co/gPreMk/Capture2.jpg" alt="JEWELRY" class="image">
+         <img src="https://image.ibb.co/c2kR1k/2017_08_20_2206.jpg" alt="JEWELRY" class="image">
        <div class="overlay">
-         <div class="text">Some text here</div>
+         <div class="text">QUICK VIEW</div>
 
        </div>
      </div>
@@ -264,7 +264,7 @@ necklaces, rings, and other jewelry for any occasion.</p>
 
        <img src="https://image.ibb.co/ggqdE5/Capture7.jpg" alt="JEWELRY" class="image">
        <div class="overlay">
-         <div class="text">Some text here</div>
+         <div class="text">QUICK VIEW</div>
 
        </div>
      </div>
@@ -487,6 +487,3 @@ itemToClone.children(':first-child').clone()
 });
 
 </script>
-	  
-	  </body>
-	</html>
