--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="navbar-collapse collapse">
 
     <ul class="nav navbar-nav navbar-right">
-    <li class="active"><a href="#">WHAT'S NEW</a></li>
+    <li class="active"><a href="https://phoenix-burn.github.io/houseofmax/">WHAT'S NEW</a></li>
 <li><a href="https://phoenix-burn.github.io/houseofmax.rings/">RINGS</a></li>
     <li><a href="#">CHAINS</a></li>
     <li><a href="#">NECKLACES</a></li>
